fix layout issues and add a few tests

--- a/src/app/components/cohort-selection/cohort-selection.less
+++ b/src/app/components/cohort-selection/cohort-selection.less
@@ -158,7 +158,8 @@ div.summary-div span {
 .cohort-selection-boxset {
     margin-top: 123px;
     margin-left: 10px;
-    padding-bottom: 760px;
+    margin-bottom: -20px;
+    overflow-y: hidden;
 }
 
 .cohort-selection-box {
@@ -166,13 +167,14 @@ div.summary-div span {
 }
 
 .panel-footer {
-    height: 26px;
+    height: 30px;
     text-align: end;
     padding-top: 3px;
     padding-bottom: 3px;
 }
 
 .main-chart-container {
-    height: 79vh;
+    height: 80vh;
     overflow-y: scroll;
+    padding-bottom: 100px;
 }
